# practice-cmake

./: .gitignore  README.md
basic/: CMakeLists.txt
first-project/: CMakeLists.txt  main.cpp
first-project/books/: CMakeLists.txt  book.cpp  book.hpp  books.cmake
step00/: CMakeLists.txt
step00/src/: main.cpp
step01/: CMakeLists.txt
step01/hello_decomposition/: CMakeLists.txt  hello.cpp  hello.hpp
step01/hello_header/: CMakeLists.txt
step01/hello_header/include/hello_header/: hello_header.hpp
step01/hello_object_lib/: CMakeLists.txt
step01/hello_object_lib/include/hello_object/: hello_object.hpp
step01/hello_object_lib/src/: hello_object.cpp
step01/hello_shared_lib/: CMakeLists.txt
step01/hello_shared_lib/include/hello/: hello.hpp
step01/hello_shared_lib/src/: internal.cpp  internal.hpp
step01/hello_static_lib/: CMakeLists.txt
step01/hello_static_lib/src/: internal.cpp  internal.hpp
step01/src/: main.cpp
